# reinfocus

./: LICENSE  README.md  environment.yml  graphics_example.ipynb  numba_test.ipynb  opencv_test.ipynb  optuna_test.ipynb  pyproject.toml  requirements.txt  stable-baselines3_test.ipynb
examples/: README.md  __init__.py  custom_environments.py  environment.ipynb  environment_example.ipynb  focus_learning_example.ipynb  graphics_and_vision.ipynb  graphics_example.ipynb  optimize_hyperparameters.py  ppo_lstm_tuned.yml  ppo_lstm_untuned.yml  ppo_tuned.yml  ppo_untuned.yml  render.ipynb  sb3_contrib_example.ipynb  train_agent.py  translate_hyperparameters.py  vision_example.ipynb  watch_agent.py
reinfocus/: camera.py  graphics.py  histories.py  hit_record.py  physics.py  ray.py  rectangle.py  shape.py  sphere.py  types.py  vector.py  vision.py  world.py
reinfocus/environment/: dynamics.py  episode_ender.py  focus_environment.py  focus_instrument.py  observation_filter.py  observation_normer.py  observation_producer.py  observation_rewarder.py  state_initializer.py  types.py  visualization.py
reinfocus/environments/: environment.py  episode_ender.py  episode_rewarder.py  episode_visualizer.py  state_initializer.py  state_observer.py  state_transformer.py  types.py  vector_environment.py  (+1 more)
requirements_tests/: optuna_test.ipynb
tests/: camera_test.py  graphics_test.py  histories_test.py  hit_record_test.py  numba_test_case.py  numba_test_utils.py  physics_test.py  ray_test.py  rectangle_test.py  sphere_test.py  test_utils.py  vector_test.py  vision_test.py  world_test.py
(+55 files in other folders)
